--- a/modules/ROOT/partials/configuration/dialog_buttons.adoc
+++ b/modules/ROOT/partials/configuration/dialog_buttons.adoc
@@ -4,7 +4,7 @@ include::partial$misc/admon-requires-6.6v.adoc[]
 
 In addition to its usual functions, the `+buttons+` property can also be used to stop the footer section from displaying.
 
-To configure a custom dialog so it does not render a footer section when displayed, set the `buttons` property to an empty array, `[]`, or to `undefined`.
+To configure a custom dialog so it does not render a footer section when displayed, set the `buttons` property to an empty array, `[]`, or omit it entirely.
 
 === basic example of a dialog without buttons or a footer
 
