DOC-2093: 6.6-release-notes.adoc
1. Added write-up of TINY-9942, New `ai`, `ai-prompt` and `send` icons.
2. Copy-edit to TINY-9939, AI Assistant plugin toolbar items and menu items.

--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -114,14 +114,22 @@ For details see the xref:dialog-configuration.adoc#configuration-parameters[Conf
 === New `ai`, `ai-prompt` and `send` icons
 //#TINY-9942
 
-// CCFR here.
+With the release of the new xref:new-premium-plugin[AI Assistant Premium plugin], {productname}’s default available icon set has been updated.
+
+This update includes three new icons:
+
+. `ai-prompt`
+. `ai`
+. `send`
+
+For the full list of icons available with {productname} by default, see xref:editor-icon-identifiers.adoc[Icons available for {productname}].
 
 For more information on **AI Assistant**, see xref:ai.adoc[AI Assistant].
 
 === AI Assistant plugin toolbar items added to the default toolbar and AI Assistant plugin menu items added to the default menu bar
 //#TINY-9939
 
-With the release of the new xref:new-premium-plugin[AI Premium plugin], {productname} defaults have been updated.
+With the release of the new xref:new-premium-plugin[AI Assistant Premium plugin], {productname}’s default menus and toolbars have been updated.
 
 If the AI Assistant plugin is added to a {productname} configuration, by default:
 
