DOC-2106: icon_list.adoc
Added entries for `ai`, `ai-prompt`, and `send` icons to `icon_list.adoc`.

--- a/modules/ROOT/partials/configuration/icon_list.adoc
+++ b/modules/ROOT/partials/configuration/icon_list.adoc
@@ -5,6 +5,8 @@
 |`+action-next+` |image:icons/action-next.svg[action-next.svg] |`+action-next.svg+`
 |`+action-prev+` |image:icons/action-prev.svg[action-prev.svg] |`+action-prev.svg+`
 |`+addtag+` |image:icons/addtag.svg[addtag.svg] |`+addtag.svg+`
+|`+ai+` |image:icons/ai.svg[ai.svg] |`+ai.svg+`
+|`+ai-prompt+` |image:icons/ai-prompt.svg[ai-prompt.svg] |`+ai-prompt.svg+`
 |`+align-center+` |image:icons/align-center.svg[align-center.svg] |`+align-center.svg+`
 |`+align-justify+` |image:icons/align-justify.svg[align-justify.svg] |`+align-justify.svg+`
 |`+align-left+` |image:icons/align-left.svg[align-left.svg] |`+align-left.svg+`
@@ -134,6 +136,7 @@
 |`+search+` |image:icons/search.svg[search.svg] |`+search.svg+`
 |`+select-all+` |image:icons/select-all.svg[select-all.svg] |`+select-all.svg+`
 |`+selected+` |image:icons/selected.svg[selected.svg] |`+selected.svg+`
+|`+send+` |image:icons/send.svg[send.svg] |`+send.svg+`
 |`+settings+` |image:icons/settings.svg[settings.svg] |`+settings.svg+`
 |`+sharpen+` |image:icons/sharpen.svg[sharpen.svg] |`+sharpen.svg+`
 |`+sourcecode+` |image:icons/sourcecode.svg[sourcecode.svg] |`+sourcecode.svg+`
