DOC-2093: 6.6-release-notes.adoc
Added basic introductory text to ’New Premium plugin, AI Assistant’ section.

--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -26,7 +26,10 @@ The following new Premium plugin was released alongside {productname} 6.6.
 
 === AI Assistant 1.0.0
 
-The new Premium plugin, **AI Assistant** // description here.
+The new Premium plugin, **AI Assistant**, allows a {productname} document to send queries to registered AI APIs and either:
+
+. add the returned results to a document; or
+. temporarily store the returned results for later use.
 
 For information on **AI Assistant**, see xref:ai.adoc[AI Assistant].
 
