--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -56,7 +56,7 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 ----
 The {pluginname} should only be invoked when there is a selection in the {productname} editor to send to the registered AI API.
 
-Selecting an active {pluginname} toolbar button, or selecting an active {pluginname} menu item when there is no selection, or when the {productname} editor is empty, will result in a random — and almost certainly unhelpful — response from the AI API.
+Selecting an active {pluginname} toolbar button, or selecting an active {pluginname} menu item, when there is no selection, or when the {productname} editor is empty, will result in a random — and almost certainly unhelpful — response.
 ----
 
 == Commands
