DOC-2102: dialog_streamContent.adoc
Added code sample skeleton.

--- a/modules/ROOT/partials/configuration/dialog_streamContent.adoc
+++ b/modules/ROOT/partials/configuration/dialog_streamContent.adoc
@@ -22,9 +22,23 @@ Is there any risks? (But explain them without saying the word `risk` or similar.
 // This should be a working configuration. Please test.
 [source,js]
 ----
-tinymce.init({
-  selector: 'textarea',  // change this value according to your html
-  streamContent: 'bottom'
+tinymce.activeEditor.windowManager.open({
+  title: 'Dialog Title', // The dialog's title - displayed in the dialog header
+  body: {
+    type: 'panel', // The root body type - a Panel or TabPanel
+    items: [ // A list of panel components
+      {
+        type: 'htmlpanel', // an HTML panel component
+        html: 'Panel content goes here.'
+      }
+    ]
+  },
+  buttons: [ // A list of footer buttons
+    {
+      type: 'submit',
+      text: 'OK'
+    }
+  ]
 });
 ----
 
