DOC-2026: ai-menu-items.adoc
Corrected default menu location for AI Assistant menu items: s/AI/Tools/.

--- a/modules/ROOT/partials/menu-item-ids/ai-menu-items.adoc
+++ b/modules/ROOT/partials/menu-item-ids/ai-menu-items.adoc
@@ -1,6 +1,6 @@
 [cols="1,1,2",options="header"]
 |===
 |Menu item identifier |xref:menus-configuration-options.adoc#example-the-tinymce-default-menu-items[Default Menu Location] |Description
-|`+aidialog+`         |AI |Description one.
-|`+aishortcuts+`      |AI |Description two.
+|`+aidialog+`         |Tools |Description one.
+|`+aishortcuts+`      |Tools |Description two.
 |===
