--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -154,7 +154,7 @@ For more information on **AI Assistant**, see xref:ai.adoc[AI Assistant].
 
 {productname} 6.6 also includes the following improvement:
 
-=== Displaying the footer section of a modal or inline dialog is now optional
+=== When defining a modal or inline dialog, if the buttons property is an empty array, or is not defined at all, the footer will now no longer be rendered
 //#TINY-9996
 
 A {productname} dialog’s UI consist of three main sections: the title, body, and footer.
@@ -163,7 +163,7 @@ Previously, it was a requirement that any {productname} dialog — built-in or 
 
 As of {productname} 6.6, it is possible to configure a custom dialog to not render the footer section.
 
-When defining a modal or inline dialog, set the `buttons` property to `undefined` or to `[]` (an empty array). The result is a dialog that displays without rendering the footer section.
+When defining a modal or inline dialog, set the `buttons` property to `[]` (an empty array) or do not define the property at all. The result is a dialog that displays without rendering the footer section.
 
 For details see the xref:dialog-configuration.adoc#configuration-parameters[Configuration parameters section] of the Dialog configuration documentation.
 
