DOC-2026: ai.adoc
Edited initial include statement to point to `admon-ai-pricing.adoc`.

--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -7,7 +7,7 @@
 :plugincode: ai
 :plugincategory: premium
 
-include::partial$misc/admon-premium-plugin.adoc[]
+include::partial$misc/admon-ai-pricing.adoc[]
 
 include::partial$misc/admon-requires-6.6v.adoc[]
 
