DOC-2093: 6.6-release-notes.adoc
Missing intro sentence for Change section no longer missing.

--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -194,6 +194,8 @@ For more information about dialogs, see the xref:dialog-configuration.adoc[Dialo
 [[change]]
 == Change
 
+{productname} 6.6 also includes the following change:
+
 === The icon in an `alertbanner` dialog component is no longer clickable if the _URL_ field is not specified
 //#TINY-10013
 
