--- a/modules/ROOT/partials/configuration/dialog_border.adoc
+++ b/modules/ROOT/partials/configuration/dialog_border.adoc
@@ -9,9 +9,9 @@ The property has a default value of `+false+`.
 
 When this property is set to true, a border displays around the `iframe` component.
 
-This component is also highlighted when it takes focus (by, for example, using the Tab key to move focus to iframe).
+The `iframe` component is also highlighted when it takes focus (by, for example, using the Tab key to change focus within the active dialog).
 
-*Type:* `+String+`
+*Type:* `+Boolean+`
 
 *Possible values:* `+true+`, `+false+`
 
@@ -27,8 +27,9 @@ tinymce.activeEditor.windowManager.open({
     type: 'panel', // The root body type - a Panel or TabPanel
     items: [ // A list of panel components
       {
-        type: 'htmlpanel', // an HTML panel component
-        html: 'Panel content goes here.'
+        name: 'preview',
+        type: 'iframe',
+        border: 'true',
       }
     ]
   },
